Open starlines